# concealed

./: .gitignore  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix  sample-config.json
src/: config.rs  keyparser.rs  main.rs
templates/: template.zone
