[package]
name = "concealed"
version = "0.1.0"
authors = ["Johan Thomsen <johanot@users.noreply.github.com>"]
edition = "2021"

[dependencies]
clap = "2"
chrono = "0.4"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = [ "full" ] }
env_logger = "0.9"
log = "0.4"
warp = "0.3"
bytes = "1"
askama = "0.10"
sha2 = "0.10"
rand = "0.8"
regex = "1"
strum = { version = "0.21", features = ["derive"] }
tempdir = "0.3"
dbc-rust-modules = { git = "https://github.com/dbcdk/rust-modules", branch = "main" }
walkdir = "2"
